Removing visibility bug from mobile navigation menu

--- a/public/css/reboto.css
+++ b/public/css/reboto.css
@@ -115,16 +115,8 @@ body {
   text-align: center;
   margin-top: 30px;
 }
-.overlay a i .active {
+.navigation-content a i .active {
   color: white;
-}
-.overlay a {
-  padding: 8px;
-  text-decoration: none;
-  font-size: 20px;
-  color: #818181;
-  display: block;
-  transition: 0.3s;
 }
 .navigation-content a i {
   color: #818181;
@@ -175,7 +167,7 @@ body {
   position: relative;
   font-family: 'Roboto Black', sans-serif;
   color: #FFF;
-  top: 0%;
+  top: 0;
   font-size: 1em;
   margin-left: 7%;
   font-weight: bold;
@@ -258,7 +250,7 @@ div.navigation-item-right:hover {
     position: relative;
     font-family: 'Roboto Black', sans-serif;
     color: #FFF;
-    top: 0%;
+    top: 0;
     font-size: 1em;
     margin-left: 7%;
     font-weight: bold;
